--- a/TcpUdpTool/Resources/help.html
+++ b/TcpUdpTool/Resources/help.html
@@ -1,34 +1,192 @@
 <html>
-	<head></head>
+	<head>
+		<style>
+		body
+		{
+			background: #F9F9F9;
+			padding: 10px;
+			font-family: Segoe UI;
+			font-size: 90%;
+		}
+		
+		p 
+		{
+			margin: 0;
+			padding: 0;
+		}
+		
+		h1
+		{
+			font-size: 28px;
+		}
+		
+		h2
+		{
+		
+		}
+		
+		h3
+		{
+			margin-top: 16px;
+			margin-bottom: 2px;
+			padding: 0px;
+		}
+		
+		h4
+		{
+			margin-bottom: 2px;
+			text-size: 12px;
+		}
+		
+		table
+		{
+			border-collapse: collapse;
+		}
+		
+		table, th, td
+		{
+			border: 1px solid black;
+		}
+		
+		td
+		{
+			padding-top: 2px;
+			padding-bottom: 2px;
+			padding-left: 10px;
+			padding-right: 10px;
+		}
+		
+		
+		.notes
+		{
+			margin-top: 8px;
+		}
+		
+		.example
+		{
+			background: #F2F2F2;
+			padding: 4px;
+		}
+		
+		.bold
+		{
+			font-weight: bold;
+		}
+		
+		</style>
+	</head>
 	<body>
 		<h1>TcpUdpTool</h1>
-		<b>Version:</b> 1.0<br />
-		<b>Autor:</b> Daniel Nilsson
-
-		<h2>Usage</h2>
-		<p>TcpUdpTool is a tool that could be useful during development of network applications.</p>
+		<p>
+			<b>Version:</b> 1.0<br />
+			<b>Autor:</b> Daniel Nilsson
+		</p>
 		
+		<h2>Infomation</h2>
+		
+		<p style="margin-top: 10px;">TcpUdpTool is a tool that aims to be useful during development of network applications and lets you quickly test your network communication.</p>
+	
 		<h3>TCP Client</h3>
 		<p>Allows for connection and direct communication with a TCP server. Any data that is received will be displayed in chunks as they are passed up by the network interface, since TCP is a streaming protocol this may not correspond to how messages are defined by the user protocol being used.</p>
 		
-		<p><b>Note:</b> The field <code>IP Address</code> can be either a regular IP address or a domain name which will be automatically resolved to and IP address.</p>
+		<div class="notes">
+			<p><b>Note:</b> The field <code>IP Address</code> can be either a regular IP address or a domain name which will be automatically resolved to an IP address.</p>
+		</div>
 		
 		<h3>TCP Server</h3>
 		<p>Start a TCP server which a client can connect to. Only a single client is allowed to connect at a time, communication with the connected client is allowed.</h3>
 		
-		<p><b>Note:</b> If 0 is specified as <code>port</code> a random port in the dynamic range will be used.</p>
-		<p><b>Note:</b> To bind to a local IPv6 interface IPv6 must be enabled in settings.</p>
+		<div class="notes">
+			<p><b>Note:</b> If 0 is specified as <code>port</code>, then a random port in the dynamic range will be used.</p>
+			<p><b>Note:</b> To bind to a local IPv6 interface IPv6 must be enabled in settings.</p>
+		</div>
 		
 		<h3>UDP</h3>
 		<p>Send and/or receive UDP packets.
 		
-		<p><b>Note:</b> It is possible to send broadcasts by specifying a broadcast address as the destination <code>IP Address</code></p>
-		<p><b>Note:</b> The destination <code>IP Address</code> field can be either a regular IP address or a domain name which will be automatically resolved to an IP Address.</p>
+		<div class="notes">
+			<p><b>Note:</b> It's possible to send broadcasts by specifying a broadcast address as the destination <code>IP Address</code> field.</p>
+			<p><b>Note:</b> The destination <code>IP Address</code> field can be either a regular IP address or a domain name which will be automatically resolved to an IP Address.</p>
+		</div>
 		
 		<h3>UDP Multicast</h3>
-		<p>Participate in communication in UDP multicast groups. Multicast traffic is if nothing else is specified only received on the default network interface. You may select which interface to listen to in the <code>Interface</code> list. You can listen to all interfaces simultainiously by selecting <code>All</code>. The same is true when sending multicast packets.</p>
+		<p>Participate in communication in UDP multicast groups. Multicast traffic is if nothing else is specified only received on the default network interface. You may select which interface to listen on in the <code>Interface</code> list. You can listen to all interfaces simultainiously by selecting <code>All</code>. The same is true when sending multicast packets.</p>
 		
+		<div class="notes">
+			<p><b>Note:</b> If you are both listening and sending on multiple interfaces you may receive duplicated packages.</p>
+		</div>
 		
+		<h2>Esape sequences</h2>
+		
+		<p>Escape sequences can be used when sending text messages in order to send special characters or mix binary data with text.</p>
+		
+		<h3>General</h3>
+		<table>
+			<tr>
+				<td class="bold">\0</td>
+				<td>NULL</td>
+			</tr>
+			<tr>
+				<td class="bold">\a</td>
+				<td>Bell (alert)</td>
+			</tr>
+			<tr>
+				<td class="bold">\b</td>
+				<td>Backspace</td>
+			</tr>
+			<tr>
+				<td class="bold">\f</td>
+				<td>Formfeed</td>
+			</tr>
+			<tr>
+				<td class="bold">\n</td>
+				<td>New line</td>
+			</tr>
+			<tr>
+				<td class="bold">\r</td>
+				<td>Carriage return</td>
+			</tr>
+			<tr>
+				<td class="bold">\t</td>
+				<td>Horizontal tab</td>
+			</tr>
+			<tr>
+				<td class="bold">\v</td>
+				<td>Vertical tab</td>
+			</tr>
+		</table>
+		
+		<h4>Example:</h4>		
+		<p>Send a line of text followed by a line break:</p>
+		<div class="example">
+			<code>Hello World!\r\n</code>
+		</div>
+		
+				
+		<h3>Unicode</h3>
+		<p>Unicode characters can be sent by using the <b>\uXXXX</b> escape sequence. 
+		To be able to send unicode characters you must select an appropriate encoding under <i>Settings</i>, e.g. <code>utf-8</code>. 
+		<b>XXXX</b> should be replaced by the character's hexadecimal unicode code point.</p>
+		
+		<h4>Example:</h4>
+		<p>Send the greek letter omega (&#x03A9;).</p>
+		<div class="example">
+			<code>\u03A9</code>
+		</div>
+		
+		<h3>Binary</h3>
+		<p>Binary data can be inserted into any text message by using the <b>\xXX</b> escape sequnce.
+		The binary data is inserted independent of the currently selected text encoding. <b>XX</b> should be 
+		replaced by the hexadeciamal byte value to insert.</p>
+		
+		<h4>Example:</h4>
+		<p>Send a text message with embedded binary data at the end.</p>
+		<div class="example">
+			<code>IHEAD\xFE\x09</code>
+		</div>
+		
+		<p style="margin-top: 10px;">To send binary data only, it may be easier to use the hexadeciamal 
+		message type where data is entered as space separated hexadecimal byte values.</p>
 		
 	</body>
 </html>
