fix spelling misstake

--- a/TcpUdpTool/Resources/help.html
+++ b/TcpUdpTool/Resources/help.html
@@ -84,7 +84,7 @@
 		<h1>TcpUdpTool</h1>
 		<p>
 			<b>Version:</b> 1.0<br />
-			<b>Autor:</b> Daniel Nilsson
+			<b>Author:</b> Daniel Nilsson
 		</p>
 		
 		<h2>Infomation</h2>
